--- a/manifest.plist
+++ b/manifest.plist
@@ -17,7 +17,7 @@
                     <key>kind</key>
                     <string>display-image</string>
                     <key>url</key>
-                    <string>https://your-username.github.io/your-repo-name/image/icon-57.png</string>
+                    <string>https://github.com/ZhuYuRan001/IOSIAPDownload/blob/main/image/logo-login.png</string>
                 </dict>
             </array>
             <key>metadata</key>
