--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://hmxz.qluzfkgo.com/signed/agxvmmkov9/5aa9b40b0e0fc3da24d1b24201849e98.ipa?sign=e884c6089cb19306b5355c37fb553c98&t=1764069263&filename=%E6%83%8A%E5%96%9C%E6%BD%AE%E7%8E%A9.ipa</string>
+                    <string>https://zhuyuran001.github.io/IOSIAPDownload/app/惊喜潮玩.ipa</string>
                 </dict>
                 <dict>
                     <key>kind</key>
