--- a/manifest.plist
+++ b/manifest.plist
@@ -23,7 +23,7 @@
             <key>metadata</key>
             <dict>
                 <key>bundle-identifier</key>
-                <string>com.yourcompany.yourapp</string>
+                <string>com.zixu.jxcwios</string>
                 <key>bundle-version</key>
                 <string>1.0.0</string>
                 <key>kind</key>
