--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://zhuyuran001.github.io/IOSIAPDownload/app/惊喜潮玩.ipa</string>
+                    <string>https://zhuyuran001.github.io/IOSIAPDownload/app/SERIS.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
