--- a/manifest.plist
+++ b/manifest.plist
@@ -17,7 +17,7 @@
                 <key>metadata</key>
                 <dict>
                     <key>bundle-identifier</key>
-                    <string>com.UUCNAVVCGF</string>
+                    <string>com.iap</string>
                     <key>bundle-version</key>
                     <string>6.0.2</string>
                     <key>kind</key>
